--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -13,7 +13,17 @@ footer,
   width: 80%;
 }
 
+main {
+  margin-top: 90px;
+}
+
 .nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 100;
+  background: #fff;
   box-shadow: 0 2px 2px -2px $shadow-color;
   overflow: auto;
 
@@ -67,6 +77,10 @@ footer,
 }
 
 @media (min-width: 600px) {
+  main {
+    margin-top: 60px;
+  }
+  
   .nav {
     &-container {
       text-align: left;
