[#1] Using 'font-awesome(http://fontawesome.io/)' to social links

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
 
+  <!-- JS -->
+  <script src="https://use.fontawesome.com/df30a99173.js"></script>
+  
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32x32.png" | relative_url }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon-16x16.png" | relative_url }}">
