--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,18 +7,21 @@ layout: default
         <div class="photo-left">
             <img class="photo" src="/assets/image/profile.jpeg">
         </div>
+        
         <h4 class="name">{{ site.author.name }}</h4>
-        <p class="info">{{ site.author.url }}</p>
-        <p class="info">{{ site.author.email }}</p>
+
+        <div class="social">
+            <a href="https://plus.google.com/u/0/108547008897918499969"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
+            <a href="https://github.com/nypark425"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/na-yeon-park-a2264a126/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        </div>
+        
+        <p class="info"><a href="{{ site.author.url }}">{{ site.author.url }}</a></p>
+        <p class="info"><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></p>
+        
         <p class="desc">{{ site.author.desc }}</p>
+
         
         {{ content }}
-        
-        <div class="social">
-            <i class="fa fa-facebook-square" aria-hidden="true"></i>
-            <i class="fa fa-twitter-square" aria-hidden="true"></i>
-            <i class="fa fa-pinterest-square" aria-hidden="true"></i>
-            <i class="fa fa-tumblr-square" aria-hidden="true"></i>
-        </div>
     </div>
 </div>
