--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 
+  <!-- page head -->
   {% include head.html %}
 
   <body>
+    <!-- navigation bar -->
     <nav class="nav">
       <div class="nav-container">
         <a href="{{ site.baseurl }}/">
@@ -13,16 +15,23 @@
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ site.baseurl }}/">Posts</a></li>
         </ul>
-    </div>
-  </nav>
+      </div>
+    </nav>
 
+    <!-- header -->
+    {% if page.title == "Home" %}
+      {% include header.html %}
+    {% endif %}
+
+    <!-- main content -->
     <main>
       {{ content }}
     </main>
 
+    <!-- footer -->
     <footer>
       <span>
-        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. Made with Jekyll using the <a href="https://github.com/chesterhow/tale/">Tale</a> theme.
+        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. Made with Jekyll and Github Pages.
       </span>
     </footer>
   </body>
