[#3] add category page, applying dropdown menu css

--- a/_sass/tale.scss
+++ b/_sass/tale.scss
@@ -7,5 +7,6 @@
 @import 'tale/pagination';
 @import 'tale/catalogue';
 @import 'custom/grid';
+@import 'custom/navigation';
 @import 'custom/profile';
 @import 'custom/header';
