--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,16 @@
         <ul>
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ site.baseurl }}/">Posts</a></li>
+          <li>
+            <div class="dropdown">
+              <a class="dropbtn" href="javascript:false;" >Category</a>
+              <div class="dropdown-content">
+                {% for category in site.categories %}
+                  <a href="/category/{{ category | first }}">{{ category | first }}</a>
+                {% endfor %}
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </nav>
