--- a/_sass/custom/_navigation.scss
+++ b/_sass/custom/_navigation.scss
@@ -6,18 +6,18 @@
 
 /* Dropdown Content (Hidden by Default) */
 .nav .dropdown-content {
+  left: -50px;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.2);
   z-index: 100;
 }
 
 /* Links inside the dropdown */
 .nav .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+  padding: 10px 16px;
   text-decoration: none;
   display: block;
 }
