[#6] fixing expanded header image in iOS

--- a/_sass/custom/_header.scss
+++ b/_sass/custom/_header.scss
@@ -1,17 +1,11 @@
 .header {
   &-image {
-    background: url('/assets/image/header-mobile.jpeg') no-repeat center center fixed;
+    background: url('/assets/image/header-mobile.jpeg') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     height: 800px;
-    top: 0;
-    left: 0;
-
-    /* Preserve aspet ratio */
-    min-width: 100%;
-    min-height: 100%;
   }
   
   @media (min-width: 600px) {
