[#8] about > 외부 링크 새창 이동

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -11,12 +11,12 @@ layout: default
         <h4 class="name">{{ site.author.name }}</h4>
 
         <div class="social">
-            <a href="https://plus.google.com/u/0/108547008897918499969"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
-            <a href="https://github.com/nypark425"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-            <a href="https://www.linkedin.com/in/na-yeon-park-a2264a126/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+            <a href="https://plus.google.com/u/0/108547008897918499969" target="_blank"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
+            <a href="https://github.com/nypark425" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/na-yeon-park-a2264a126/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
         </div>
         
-        <p class="info"><a href="{{ site.author.url }}">{{ site.author.url }}</a></p>
+        <p class="info"><a href="{{ site.author.url }}" target="_blank">{{ site.author.url }}</a></p>
         <p class="info"><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></p>
         
         <p class="desc">{{ site.author.desc }}</p>
