[#13] Change category menu's style from dropdown to side navigation menu by reference to https://www.w3schools.com/howto/howto_js_sidenav.asp

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,12 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
 
-  <!-- JS -->
+  <!-- JS > font awesome for icons-->
   <script src="https://use.fontawesome.com/df30a99173.js"></script>
+  <!-- JS > Lib -->
+  <script type="text/javascript" src="{{ site.js_dir }}/lib/jquery-3.3.1.min.js"></script>
+  <!-- JS > Custom -->
+  <script type="text/javascript" src="{{ site.js_dir }}/default.js"></script>
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32x32.png" | relative_url }}">
