--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,18 +15,19 @@
           <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
           <li><a href="{{ site.baseurl }}/">Posts</a></li>
           <li>
-            <div class="dropdown">
-              <a class="dropbtn" href="javascript:false;" >Category</a>
-              <div class="dropdown-content">
-                {% for category in site.categories %}
-                  <a href="/category/{{ category | first }}">{{ category | first | capitalize }}</a>
-                {% endfor %}
-              </div>
-            </div>
+            <a href="javascript:void(0);" class="open_btn">Category</a>
           </li>
         </ul>
       </div>
     </nav>
+
+    <!-- side navigation menu -->
+    <div id="sideNavMenu" class="sidenav">
+      <a href="javascript:void(0)" class="close_btn">&times;</a>
+      {% for category in site.categories %}
+      <a href="/category/{{ category | first }}">{{ category | first | capitalize }}</a>
+      {% endfor %}
+    </div>
 
     <!-- header -->
     {% if page.title == "Home" %}
