[#14] changing blog url because of github username renamed

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,15 +4,13 @@ layout: default
 
 <div class="row">
     <div class="col-12 profile">
-        <div class="photo-left">
-            <img class="photo" src="/assets/image/profile.jpeg">
-        </div>
+        <img class="photo" src="/assets/image/profile.jpeg">
         
-        <h4 class="name">{{ site.author.name }}</h4>
+        <h4 class="name">{{ site.author.name }} / {{ site.author.namekr }}</h4>
 
         <div class="social">
             <a href="https://plus.google.com/u/0/108547008897918499969" target="_blank"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
-            <a href="https://github.com/nypark425" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+            <a href="https://github.com/dorongii" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
             <a href="https://www.linkedin.com/in/na-yeon-park-a2264a126/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
         </div>
         
