--- a/_sass/custom/_profile.scss
+++ b/_sass/custom/_profile.scss
@@ -5,10 +5,31 @@
 .profile .photo {
   margin-left: auto;
   margin-right: auto;
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
+  width: 150px;
+  height: 150px;
+  border-radius: 75px;
   border: 4px solid #fff;
+
+  @media (min-width: 600px) {
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+  }
+}
+
+.profile .square_photo {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  border: 4px solid #fff;
+
+  @media (min-width: 600px) {
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+  }
 }
 
 .profile .name {
