[#10] Modify related texts by changing Github username

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,7 +10,7 @@ layout: default
 
         <div class="social">
             <a href="https://plus.google.com/u/0/108547008897918499969" target="_blank"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
-            <a href="https://github.com/dorongii" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+            <a href="https://github.com/staywithjoy" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
             <a href="https://www.linkedin.com/in/na-yeon-park-a2264a126/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
         </div>
         
